<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CharacterDetailFragment">

        <ImageView
            android:id="@+id/characterImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/characters_todo"
            android:minHeight="200dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="ImageContrastCheck"></ImageView>

        <TextView
            android:id="@+id/charactersId"
            android:layout_width="171dp"
            android:layout_height="41dp"
            android:layout_below="@id/characterImage"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:text="@string/characters_id" />

        <TextView
            android:id="@+id/charactersStatus"
            android:layout_width="171dp"
            android:layout_height="41dp"
            android:layout_alignBottom="@id/characterImage"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="-173dp"
            android:text="@string/characters_status" />

        <TextView
            android:id="@+id/charactersSpecies"
            android:layout_width="171dp"
            android:layout_height="41dp"
            android:layout_alignBottom="@id/characterImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-229dp"
            android:text="@string/characters_species" />

        <TextView
            android:id="@+id/charactersGender"
            android:layout_width="171dp"
            android:layout_height="41dp"
            android:layout_alignBottom="@id/characterImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-292dp"
            android:text="@string/characters_gender" />

        <TextView
            android:id="@+id/charactersName"
            android:layout_width="171dp"
            android:layout_height="41dp"
            android:layout_alignBottom="@id/characterImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-112dp"
            android:text="@string/characters_name" />

    </RelativeLayout>



    </layout>